--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -1,46 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:fitsSystemWindows="true"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".ui_second.LiJiYuYueActivity">
+
     <RelativeLayout
-        android:background="@color/top_color"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:background="@color/top_color">
+
         <ImageView
             android:id="@+id/iv_order_back"
-            android:src="@drawable/back"
-            android:layout_height="match_parent"
             android:layout_width="40dp"
-            />
+            android:layout_height="match_parent"
+            android:src="@drawable/back" />
+
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="工作室"
             android:textColor="#fff"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="@dimen/text_size_big"
-            />
+            android:textSize="@dimen/text_size_big" />
     </RelativeLayout>
+
     <RelativeLayout
-        android:background="@drawable/background"
         android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:layout_margin="@dimen/distance"
-        android:layout_height="40dp">
+        android:background="@drawable/background">
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tb_order_mTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:tabSelectedTextColor="@color/text_color"
             app:tabBackground="@drawable/tab_select"
             app:tabIndicatorHeight="0dp"
-            >
-        </android.support.design.widget.TabLayout>
+            app:tabSelectedTextColor="@color/text_color"></android.support.design.widget.TabLayout>
     </RelativeLayout>
 
     <android.support.v4.view.ViewPager
@@ -48,7 +48,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/distance"
-        android:layout_marginRight="@dimen/distance"
-        >
-    </android.support.v4.view.ViewPager>
+        android:layout_marginRight="@dimen/distance"></android.support.v4.view.ViewPager>
 </LinearLayout>
